<resources>
    <string name="app_name">新闻一刻</string>

    <!-- 侧滑按钮文字 -->
    <string name="left_menu_project_address">项目地址</string>
    <string name="left_menu_down">扫码下载</string>
    <string name="left_menu_shared">分享好友</string>
    <string name="left_menu_about_app">关于应用</string>
    <string name="left_menu_exit">退出应用</string>

    <!-- 底部导航按钮文字 -->
    <string name="recomment">推荐</string>
    <string name="welfare">福利</string>
    <string name="movie">电影</string>
    <string name="my">我的</string>

    <string name="press_the_exit_again">再按一次退出</string>
    <string name="loading">加载中</string>
    <string name="save">保存</string>
    <string name="setting_wallpaper">设置壁纸</string>
    <string name="save_dir_name">福利图片</string>
    <string name="setting_success">设置成功</string>
    <string name="network_err">网络不给力~</string>
    <string name="checkout_network">请检查网络连接</string>
    <string name="network_disable">网络不可用\n请检查网络连接</string>
    <string name="result_data_fail">数据为空</string>

    <string name="doubao_top_250">豆瓣电影Top250</string>
    <string name="classic_quotations">生活就像巧克力,你永远不知道下一颗是什么味道</string>
    <string name="hot_list">热映榜</string>
    <string name="director">导演：</string>
    <string name="main_perform">主演：</string>
    <string name="movie_type">类型：</string>
    <string name="movie_score">评分：</string>
    <string name="doubao_top">豆瓣Top</string>
    <string name="no_more_data">没有更多数据了~</string>
    <string name="person_score">&#160;人评分</string>
    <string name="movie_day">上映日期：%s</string>
    <string name="movie_city">制片国家/地区：%s</string>
    <string name="movie_other_name">又名</string>
    <string name="brief_introduction">剧情简介</string>
    <string name="movie_all_performer">导演 &amp; 演员</string>
    <string name="movie_share">抱歉，分享功能暂时不可用~</string>
    <string name="action_share">分享</string>
    <string name="no_more_content">暂无更多内容</string>
    <string name="network_error">网络不给力</string>

    <string name="config_show_tab">显示Tab</string>
    <string name="config_hide_tab">隐藏Tab</string>
    <string name="config_drag_tip">长按编辑,拖拽排序</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="copy_content">复制内容</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="comment">评论</string>
    <string name="back">返回</string>

    <string name="project_address_url"><a color='white' href='https://github.com/wuxiaoqi123/news_client'>https://github.com/wuxiaoqi123/news_client</a></string>
    <string name="github_url">https://github.com/wuxiaoqi123/news_client</string>
    <string name="scan_down_load_url">https://github.com/wuxiaoqi123/news_client</string>
    <string name="share_url">我在使用新闻一刻，快去github上下载源码吧~ https://github.com/wuxiaoqi123/news_client</string>

    <string name="about_app">非常感谢github上众多开源项目，使我可以去学习大牛们写的代码。在这里深深的表示感谢，谢谢！\n新闻一刻APP是本人在工作闲暇之时，为了学习其它开源项目而写的，后续也会一直维护，欢迎start和Issues。</string>

    <string name="register_or_login">登录 | 注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="my_theme">切换主题</string>
    <string name="my_setting">设置</string>
    <string name="my_version">版本号</string>
    <string name="my_clear">清除缓存</string>

    <string name="login_input_username_hint">请输入手机号或邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>

    <!-- 设置 -->
    <string name="base_setting">基本设置</string>
    <string name="only_wifi_load">仅在wifi环境下加载图片(不包括电影界面)</string>
    <string name="no_pic_mode">无图模式</string>
    <string name="set_switch_time">设置切换时间</string>
    <string name="auto_switch_night_mode">自动切换夜间模式</string>
    <string name="slide_btn_hide">上滑列表导航按钮隐藏</string>
    <string name="navigation_btn">导航按钮</string>
    <string name="set_text_size">设置字体大小</string>
    <string name="text_size">字体大小</string>
    <string name="video_setting">视频设置</string>
    <string name="start_force_land_play_video">开启后强制横屏播放视频</string>
    <string name="full_screen_play">全屏播放</string>
    <string name="only_wifi_auto_play_video">仅在wifi环境下自动播放视频</string>
    <string name="auto_play_video">自动播放视频</string>
    <string name="only_wifi_auto_down_video">仅在Wifi环境下自动下载播放的视频</string>
    <string name="video_down">视频下载</string>
    <string name="other_set">其它设置</string>
    <string name="cursor_theme_color">自定义主题颜色</string>
    <string name="theme_color">主题颜色</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="similar_ios_slide_back">类似iOS左侧滑动返回</string>
    <string name="slide_back">滑动返回</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="licenses">开源许可</string>
    <string name="souce_code">源码</string>
    <string name="only_study">仅作为个人学习非商业用途</string>
    <string name="copy_right">版权声明</string>
    <string name="start">启动</string>
    <string name="time">时间</string>
    <string name="auto_night_start_time">夜间模式开始时间</string>
    <string name="auto_day_start_time">日间模式开始时间</string>
    <string name="custom">自定义</string>
    <string name="set_language">语言设置</string>
    <string name="chinese_simplified">中文简体</string>
    <string name="only_wifi_load_img">已开启仅在wifi环境下加载图片\n可到设置界面更改</string>
    <string name="blog_name">这个杀手不太累</string>
    <string name="blog_url">Blog: http://blog.csdn.net/zhe_ge_sha_shou</string>
    <string name="do_you_want_clear_cache">确定要清除缓存吗？</string>
    <string name="yes">确定</string>

</resources>
