<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/project"
        android:icon="@drawable/ic_touch_app_black_24dp"
        android:title="@string/left_menu_project_address" />

    <item
        android:id="@+id/down"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/left_menu_down" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/left_menu_shared" />

    <item
        android:id="@+id/guanyu"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/left_menu_about_app" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/left_menu_exit" />
</menu>