<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="bottom"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/item_movie_head_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/item_movie_head_img"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/item_movie_head_img"
            android:layout_toRightOf="@id/item_movie_head_img"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doubao_top_250"
                android:textColor="@color/my_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:maxLines="1"
                android:text="@string/classic_quotations"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@null"
            android:elevation="8dp"
            android:src="@drawable/home_arrow_right_gray"
            tools:targetApi="lollipop" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="7dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/item_movie_head_color_img"
            android:layout_width="3dp"
            android:layout_height="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/hot_list"
            android:textColor="@color/my_text_color"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>
