<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBackground"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/activity_details_page_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x518"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/activity_details_page_collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/activity_details_head_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:id="@+id/activity_details_head_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/activity_details_head_photo_img"
                        android:layout_width="100dp"
                        android:layout_height="132dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@color/colorPageBg"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/activity_details_rating_rate_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@color/color_red" />

                            <TextView
                                android:id="@+id/activity_details_rating_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginStart="5dp"
                                android:ellipsize="end"
                                android:lines="1"
                                android:textColor="@color/white" />

                        </LinearLayout>


                        <!--导演-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="43dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/director"
                                    android:textColor="@color/white" />

                                <View
                                    android:layout_width="28dp"
                                    android:layout_height="2dp"
                                    android:layout_marginTop="2dp"
                                    android:background="@color/white" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/activity_details_director_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <!--主演-->

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_perform"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/activity_details_casts_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/activity_details_genres_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/white" />

                        <!--上映日期-->
                        <TextView
                            android:id="@+id/activity_details_one_day_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:ellipsize="end"
                            android:textColor="@color/white" />

                        <!--制片国家/地区-->
                        <TextView
                            android:id="@+id/activity_details_city_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:ellipsize="end"
                            android:lines="2"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_details_page_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/activity_details_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="10dp">

                        <View
                            android:layout_width="2dp"
                            android:layout_height="18dp"
                            android:background="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/movie_other_name"
                            android:textColor="@color/colorContent"
                            android:textSize="17sp" />

                    </LinearLayout>

                    <!--又名-->
                    <TextView
                        android:id="@+id/activity_details_other_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:textColor="@color/colorTitle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp">

                        <View
                            android:layout_width="2dp"
                            android:layout_height="18dp"
                            android:background="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/brief_introduction"
                            android:textColor="@color/colorContent"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/activity_details_summary_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="7dp"
                        android:padding="12dp"
                        android:textColor="@color/colorTitle"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="5dp"
                        android:paddingTop="10dp">

                        <View
                            android:layout_width="2dp"
                            android:layout_height="18dp"
                            android:background="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/movie_all_performer"
                            android:textColor="@color/colorContent"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/activity_details_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ProgressBar
                android:id="@+id/activity_details_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:max="1000"
                android:visibility="invisible" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_details_page_float_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_share_white_24dp"
        app:layout_anchor="@id/activity_details_page_appbar_layout"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
